# contextmesh

./: .gitattributes  .gitignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.check.json  tsconfig.json  vitest.config.ts  vitest.source.config.ts
artifacts/: v04-performance.json  v05-quality.json  v051-external-holdout.json  v06-boundary-impact.json  v07-memory-validation.json
docs/: architecture.md  ci-policy.md  graph-kernel.manifest.json  mcp-api.md  multilanguage.md  operations.md  python-parser.manifest.json  security-waivers.md
evaluation/: README.md
evaluation/fixtures/v051-external-corpus-v1/: Cargo.toml  go.mod  pyproject.toml  tsconfig.json
migrations/: 001_initial.sql  002_workspace_index_config.sql  003_workspace_freshness.sql  004_semantic_retrieval.sql  005_semantic_release_gate.sql  006_semantic_hydration_index.sql  007_multilanguage_graph.sql  008_operational_status.sql  009_precision_overlay.sql  010_index_writer_lease.sql  011_precision_nodes.sql  012_precision_provider_transition_epoch.sql  013_boundary_resource_graph.sql  014_memory_validation.sql
native/graph-kernel/: Cargo.toml
native/graph-kernel/src/: main.rs
scripts/: assert-performance-runner.ts  audit-production.ts  benchmark-hydration.ts  benchmark-semantic.ts  benchmark-unavailable.ts  benchmark.ts  build-native.ts  bundle-archive.ts  bundled-sdk-manifest.json  compare-parity.ts  evaluate-multilang.ts  evaluate-quality.ts  evaluate-v04.ts  evaluate-v05.ts  evaluate-v051-holdout.ts  evaluate-v06.ts  evaluate-v07.ts  evaluation-contract.ts  (+13 more)
(+122 files in other folders)
