[package]
name = "contextmesh-graph-kernel"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[dependencies]
notify = "=8.2.0"
rayon = "=1.11.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sysinfo = "=0.33.1"
tree-sitter = "=0.25.10"
tree-sitter-python = "=0.25.0"
tree-sitter-typescript = "=0.23.2"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
